# pain-of-performance-portability

./: .gitignore  Makefile  README.md  index.htm  pandoc-revealjs.template  slides.md
code/compass/: CMakeLists.txt  bench_sse4_available.cpp
css/: my_reveal_overrides.css  remark_specific.css  scionics_styles.css
tools/filters/: code_snippets.py  columnfilter.py  divclass.py  dump_links.py  linkTable.hi  notes.py  test_code.md
video/: Drosophila_Embryogenesis_beads_removed.webm  developing-drosophila-neuronal-cells.mov  developing-drosophila-neuronal-cells.webm
